# MCS-unimib-image-compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dct2.cpp  dct2compare.cpp
dati/: grafico_dct2.gp  risultati_dct2.txt
include/: mainwindow.h
src/: mainwindow.cpp
